force-app/main/default/objects/Offers_Signed_Document_Attached__e.object
<CustomObject>
    <fields>
        <fullName>Content_Document_Id__c</fullName>
        <label>Content Document Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Envelop_Id__c</fullName>
        <label>Envelop Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>File_Name__c</fullName>
        <label>File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Offers Signed Document Attached</label>
    <pluralLabel>Offers Signed Documents Attached</pluralLabel>
</CustomObject>